# bootcamp-python-sql

./: README.md
class01/: README.md  kpi.py
class02/: README.md  exercise.py
class03/: README.md  exercise.py
class04/: README.md  example.csv  exercise.py  main.py
class05/: README.md  etl.py  main.py  sell.csv
class05/exercises/: average.py
class06/: README.md  etl.py  pipeline.py  pyproject.toml
class07/: csv-class.py  csv-test.py  pyproject.toml
class07/data/: data.csv
class08/: main.py  pyproject.toml
class08/src/: controller.py  db.py  models.py  schema.py
class09/: pyproject.toml
class10/: docker-compose.yml  pyproject.toml
class10/backend/: Dockerfile  database.py  models.py  schemas.py
class10/frontend/: app.py
